test/fail/interpolation/interp_multiline_string.lily
#[
SyntaxError: Multi-line string not allowed within interpolation.
    from interp_multiline_string.lily:6:
]#

var v = $" ^(""" """)"
